# nzengi_db

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: field.rs  lib.rs  main.rs  types.rs
src/api/: client.rs  mod.rs  server.rs
src/circuit/: builder.rs  config.rs  layouter.rs  mod.rs
src/commitment/: database.rs  ipa.rs  mod.rs
src/crypto/: hash.rs  mod.rs  random.rs
src/database/: loader.rs  mod.rs  schema.rs  storage.rs  tpch.rs
src/gates/: aggregation.rs  group_by.rs  join.rs  mod.rs  range_check.rs  sort.rs
src/proof/: mod.rs  prover.rs  recursive.rs  verifier.rs
src/query/: executor.rs  mod.rs  optimizer.rs  parser.rs  planner.rs
src/utils/: helpers.rs  logger.rs  mod.rs
