[package]
name = "nzengi_db"
version = "0.1.0"
edition = "2021"
authors = ["NzengiDB Team"]
description = "Efficient Non-interactive Zero-Knowledge Proofs for Arbitrary SQL-Query Verification"
repository = "https://github.com/yourusername/nzengi_db"
license = "MIT OR Apache-2.0"
keywords = ["zero-knowledge", "zkp", "database", "sql", "cryptography"]
categories = ["cryptography", "database"]

[dependencies]
# Halo2 ZKP dependencies
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.4.0" }
halo2curves = "0.9"
halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.4.0" }

# Field arithmetic
ff = "0.13"
group = "0.13"

# Utilities
rand = "0.9"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"

# SQL parsing
sqlparser = "0.59"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
bincode = "2.0"

# Async runtime (optional)
tokio = { version = "1", features = ["full"], optional = true }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

# Web API (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.9"
tempfile = "3.23"

# Benchmark files will be created during implementation
# [[bench]]
# name = "gates_benchmark"
# harness = false
#
# [[bench]]
# name = "queries_benchmark"
# harness = false

[[bin]]
name = "nzengi_db"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "tokio"]
api = ["axum", "tower", "tokio"]
production = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
